// Copyright (c) 2023 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate Java SDK,
// which is released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/sdk-java/blob/main/LICENSE
syntax = "proto3";

package dev.restate.sdk.java;

import "google/protobuf/any.proto";
import "dev/restate/service/protocol.proto";

option java_package = "dev.restate.generated.sdk.java";

// Type: 0xFC00 + 0
message CombinatorAwaitableEntryMessage {
  repeated uint32 entry_index = 1;
}

// Type: 0xFC00 + 1
// Flag: RequiresRuntimeAck
message SideEffectEntryMessage {
  oneof result {
    bytes value = 14;
    dev.restate.service.protocol.Failure failure = 15;
  };
}
